<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/registration"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/edtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        android:hint="@string/enter_first_name"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        android:hint="@string/enter_last_name"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/edtRUsername"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_as_username"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/edtRPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtRUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:ems="10"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rbtGender"
        android:layout_width="238dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/swtCe"
        app:layout_constraintTop_toBottomOf="@+id/edtRPassword">

        <RadioButton
            android:id="@+id/rbtMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="Male"
            android:checked="true"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="276dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <RadioButton
            android:id="@+id/rbtFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Female"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rbtMale"
            tools:layout_editor_absoluteY="276dp"
            tools:ignore="HardcodedText" />

    </RadioGroup>

    <Switch
        android:id="@+id/swtCe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Branch CE/IT"
        android:textOff="@string/ce"
        android:textOn="@string/it"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/rbtGender"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRPassword"
        tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />

    <Spinner
        android:id="@+id/spiCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/citylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbtGender" />

    <CheckBox
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/profile_status_active_inactive"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:id="@+id/chkStatus"
        app:layout_constraintTop_toBottomOf="@+id/spiCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/register_me"
        android:layout_marginTop="8dp"
        android:id="@+id/btnRegister"
        android:onClick="saveRecord"
        app:layout_constraintTop_toBottomOf="@+id/chkStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>